--- a/pages/myInfo/myInfo.wxss
+++ b/pages/myInfo/myInfo.wxss
@@ -1,1 +1,19 @@
 /* pages/myInfo/myInfo.wxss */
+.container{
+  display: flex;
+  flex-direction: row;
+  align-items:stretch;  
+  justify-content: space-between;
+}
+
+.start{
+    display: flex;
+    flex-direction: row;
+    align-items: center;  
+}
+
+.end{
+    display: flex;
+    flex-direction: row;
+    align-items: center;  
+}
