--- a/pages/idleItem/detail/detail.wxss
+++ b/pages/idleItem/detail/detail.wxss
@@ -1,10 +1,17 @@
 /* pages/idleItem/detail/detail.wxss */
 
+.detail-container{
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 110rpx;
+}
+
 .user-info-image {
   width: 110rpx;
   height: 110rpx;
-  border-radius: 100rpx;
+  border-radius: 20rpx;
 }
+
 
 .user-info {
   display: flex;
@@ -17,20 +24,35 @@
   display: flex;
   flex-direction: column;
   margin-left: 20rpx;
+  margin-top: 5rpx;
+  width: 450rpx;
+}
+
+.phone{
+  justify-items: flex-end;
+}
+
+.phone-image{
+  width: 98rpx;
+  height: 110rpx;
 }
 
 .user-name {
   margin-left: 5rpx;
+  font-size: 30rpx;
+  color: #4D4D4D;
+  font-weight: bold;
 }
 
-.user-gender {
-  margin-left: 50rpx;
+.time{
+  font-size: 28.9rpx;
+  color: #4D4D4D;
 }
 
 .user-basics-info {
   display: flex;
   flex-direction: row;
-  margin-top: 15rpx;
+  margin-top: 8rpx;
 }
 
 .item-info {
@@ -40,10 +62,15 @@
 
 .money {
   margin-left: 60rpx;
+  font: 35rpx;
+  color: red;
+  font-weight: bold;
 }
 
 .address {
-  margin-left: 60rpx;
+  margin-left: 50rpx;
+  font-size: 31rpx;
+  color: #333333;
 }
 
 .item-description {
@@ -52,4 +79,95 @@
   width: 700rpx;
   margin: 20rpx 20rpx 0 20rpx; 
   text-indent: 70rpx;
+}
+
+.description{
+  font-size: 30rpx;
+}
+
+.detail{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1rpx solid #b6b4b4;
+  margin: 5rpx 5rpx 5rpx 5rpx;
+}
+
+.detail image {
+  width: 650rpx;
+  height: 500rpx;
+  margin: 10rpx auto;
+  border-radius: 8rpx;
+}
+
+.view{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  font-size: 29rpx;
+  color: #AAAAAA;
+}
+
+.message-container{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  margin: 18rpx 0 18rpx 0;
+  padding-bottom: 8rpx;
+}
+
+.message{
+  margin: 10rpx 0 20rpx 20rpx;
+}
+
+.message-header{
+  display: flex;
+  flex-direction: row;
+}
+
+.message-image{
+  width: 50rpx;
+  height: 50rpx;
+  padding-left: 40rpx; 
+  border-radius: 5rpx;
+}
+
+.message-name{
+  padding-left: 20rpx; 
+}
+
+.message-info{
+  border-bottom: 1rpx solid #E6E6E6;
+}
+
+.message-content{
+  margin: 0 0 8rpx 100rpx;
+}
+
+.bottom-box{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 115rpx;
+  background-color: white;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0rpx;
+}
+
+.box-image{
+  width: 68rpx;
+  height: 71rpx;
+}
+
+.box-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.box-text{
+  font-size: 25rpx;
 }
