--- a/pages/myInfo/home/home.wxml
+++ b/pages/myInfo/home/home.wxml
@@ -7,7 +7,7 @@
   <view class="line"></view>
   <view>
     <view class="btn">
-      <button>我发布的宝贝</button>
+      <button catchtap="publish">我发布的宝贝</button>
       <button>我关注的宝贝</button>
       <button>我的留言</button>
       <button>关于我们</button>
